@@ -1,1 +1,2 @@
 Bug fixes
+If you are using Guide API, update it to 1.11.2-2.1.4-56 or newer.
